add application class

--- a/source/code/intern/compiler/game/game.vcxproj
+++ b/source/code/intern/compiler/game/game.vcxproj
@@ -161,6 +161,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\game\main.cpp" />
+    <ClCompile Include="application.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\core\core.vcxproj">
@@ -178,6 +179,9 @@
     <ProjectReference Include="..\logic\logic.vcxproj">
       <Project>{7642a9a6-a11a-44cb-a06a-316e44b6c199}</Project>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="application.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
