--- a/source/code/intern/compiler/game/game.vcxproj.filters
+++ b/source/code/intern/compiler/game/game.vcxproj.filters
@@ -1,10 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="..\..\src\game\main.cpp" />
-    <ClCompile Include="application.cpp" />
+    <ClInclude Include="..\..\src\game\application.h" />
+    <ClInclude Include="..\..\src\game\phase.h" />
+    <ClInclude Include="..\..\src\game\play.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="application.h" />
+    <ClCompile Include="..\..\src\game\application.cpp" />
+    <ClCompile Include="..\..\src\game\phase.cpp" />
   </ItemGroup>
 </Project>
