update include deps for some projects

--- a/source/code/intern/compiler/graphics/graphics.vcxproj
+++ b/source/code/intern/compiler/graphics/graphics.vcxproj
@@ -161,6 +161,14 @@
   <ItemGroup>
     <ClCompile Include="..\..\src\graphics\main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\core\core.vcxproj">
+      <Project>{dda1782a-6700-4813-b9b2-01baadcddf7b}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\data\data.vcxproj">
+      <Project>{7459d886-e981-40c0-910b-f904af7cbd9c}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
