--- a/source/code/intern/compiler/data/data.vcxproj
+++ b/source/code/intern/compiler/data/data.vcxproj
@@ -159,6 +159,11 @@
   <ItemGroup>
     <ClCompile Include="..\..\src\data\main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\core\core.vcxproj">
+      <Project>{dda1782a-6700-4813-b9b2-01baadcddf7b}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
