--- a/source/code/intern/compiler/data/data.vcxproj.filters
+++ b/source/code/intern/compiler/data/data.vcxproj.filters
@@ -1,6 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="..\..\src\data\main.cpp" />
+    <ClCompile Include="..\..\src\data\data.shutdownPhase.cpp" />
+    <ClCompile Include="..\..\src\data\data.startupPhase.cpp" />
+    <ClCompile Include="..\..\src\data\data.mainMenuPhase.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\src\data\data.shutdownPhase.h" />
+    <ClInclude Include="..\..\src\data\data.startupPhase.h" />
+    <ClInclude Include="..\..\src\data\data.mainMenuPhase.h" />
   </ItemGroup>
 </Project>
