--- a/source/code/intern/compiler/logic/logic.vcxproj.filters
+++ b/source/code/intern/compiler/logic/logic.vcxproj.filters
@@ -1,6 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="..\..\src\logic\logic.cpp" />
+    <ClCompile Include="..\..\src\logic\logic.loadPhase.cpp" />
+    <ClCompile Include="..\..\src\logic\logic.unloadPhase.cpp" />
+    <ClCompile Include="..\..\src\logic\logic.startupPhase.cpp" />
+    <ClCompile Include="..\..\src\logic\logic.shutdownPhase.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\src\logic\logic.loadPhase.h" />
+    <ClInclude Include="..\..\src\logic\logic.unloadPhase.h" />
+    <ClInclude Include="..\..\src\logic\logic.startupPhase.h" />
+    <ClInclude Include="..\..\src\logic\logic.shutdownPhase.h" />
   </ItemGroup>
 </Project>
