--- a/source/code/intern/compiler/data/data.vcxproj.filters
+++ b/source/code/intern/compiler/data/data.vcxproj.filters
@@ -1,14 +1,38 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="..\..\src\data\data.shutdownPhase.cpp" />
-    <ClCompile Include="..\..\src\data\data.startupPhase.cpp" />
-    <ClCompile Include="..\..\src\data\data.mainMenuPhase.cpp" />
+    <ClCompile Include="..\..\src\data\data.metaEntitySystem.cpp" />
+    <ClCompile Include="..\..\src\data\data.startupPhase.cpp">
+      <Filter>phases</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\data\data.shutdownPhase.cpp">
+      <Filter>phases</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\data\data.mainMenuPhase.cpp">
+      <Filter>phases</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\src\data\data.shutdownPhase.h" />
-    <ClInclude Include="..\..\src\data\data.startupPhase.h" />
-    <ClInclude Include="..\..\src\data\data.mainMenuPhase.h" />
     <ClInclude Include="..\..\src\data\data.entity.h" />
+    <ClInclude Include="..\..\src\data\data.metaEntitySystem.h" />
+    <ClInclude Include="..\..\src\data\data.metaEntity.h" />
+    <ClInclude Include="..\..\src\data\data.startupPhase.h">
+      <Filter>phases</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\data\data.shutdownPhase.h">
+      <Filter>phases</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\data\data.mainMenuPhase.h">
+      <Filter>phases</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Xml Include="..\..\src\data\data.meta-entity.xml" />
+    <Xml Include="..\..\src\data\data.map_1.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Filter Include="phases">
+      <UniqueIdentifier>{3183bb49-05e2-48a5-bd55-0ea0d365ffb3}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
 </Project>
