--- a/source/code/intern/compiler/data/data.vcxproj
+++ b/source/code/intern/compiler/data/data.vcxproj
@@ -178,7 +178,7 @@
     <ClInclude Include="..\..\src\data\data.startupPhase.h" />
   </ItemGroup>
   <ItemGroup>
-    <Xml Include="..\..\src\data\data.map_1.xml" />
+    <Xml Include="..\..\src\data\data.map-1.xml" />
     <Xml Include="..\..\src\data\data.meta-entity.xml" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
