--- a/source/code/intern/compiler/logic/logic.vcxproj.filters
+++ b/source/code/intern/compiler/logic/logic.vcxproj.filters
@@ -1,15 +1,36 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="..\..\src\logic\logic.loadPhase.cpp" />
-    <ClCompile Include="..\..\src\logic\logic.unloadPhase.cpp" />
-    <ClCompile Include="..\..\src\logic\logic.startupPhase.cpp" />
-    <ClCompile Include="..\..\src\logic\logic.shutdownPhase.cpp" />
+    <ClCompile Include="..\..\src\logic\logic.loadPhase.cpp">
+      <Filter>phases</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\logic\logic.shutdownPhase.cpp">
+      <Filter>phases</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\logic\logic.startupPhase.cpp">
+      <Filter>phases</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\logic\logic.unloadPhase.cpp">
+      <Filter>phases</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\src\logic\logic.loadPhase.h" />
-    <ClInclude Include="..\..\src\logic\logic.unloadPhase.h" />
-    <ClInclude Include="..\..\src\logic\logic.startupPhase.h" />
-    <ClInclude Include="..\..\src\logic\logic.shutdownPhase.h" />
+    <ClInclude Include="..\..\src\logic\logic.loadPhase.h">
+      <Filter>phases</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\logic\logic.shutdownPhase.h">
+      <Filter>phases</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\logic\logic.startupPhase.h">
+      <Filter>phases</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\logic\logic.unloadPhase.h">
+      <Filter>phases</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Filter Include="phases">
+      <UniqueIdentifier>{b6a215c4-b8dc-429b-a706-d5aa917f57ee}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
 </Project>
