add new entity files and do some work on implementations

--- a/source/code/intern/compiler/data/data.vcxproj
+++ b/source/code/intern/compiler/data/data.vcxproj
@@ -183,16 +183,32 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\src\data\data.entityIterator.cpp" />
+    <ClCompile Include="..\..\src\data\data.entityLink.cpp" />
+    <ClCompile Include="..\..\src\data\data.entityList.cpp" />
+    <ClCompile Include="..\..\src\data\data.eventExample.cpp" />
+    <ClCompile Include="..\..\src\data\data.eventSystem.cpp" />
     <ClCompile Include="..\..\src\data\data.mainMenuPhase.cpp" />
+    <ClCompile Include="..\..\src\data\data.map.cpp" />
     <ClCompile Include="..\..\src\data\data.metaEntitySystem.cpp" />
     <ClCompile Include="..\..\src\data\data.shutdownPhase.cpp" />
     <ClCompile Include="..\..\src\data\data.startupPhase.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\data\data.entity.h" />
+    <ClInclude Include="..\..\src\data\data.entityCategory.h" />
+    <ClInclude Include="..\..\src\data\data.entityFolder.h" />
+    <ClInclude Include="..\..\src\data\data.entityIterator.h" />
+    <ClInclude Include="..\..\src\data\data.entityLink.h" />
+    <ClInclude Include="..\..\src\data\data.entityList.h" />
+    <ClInclude Include="..\..\src\data\data.event.h" />
+    <ClInclude Include="..\..\src\data\data.eventListener.h" />
+    <ClInclude Include="..\..\src\data\data.eventSystem.h" />
     <ClInclude Include="..\..\src\data\data.mainMenuPhase.h" />
+    <ClInclude Include="..\..\src\data\data.map.h" />
     <ClInclude Include="..\..\src\data\data.metaEntity.h" />
     <ClInclude Include="..\..\src\data\data.metaEntitySystem.h" />
+    <ClInclude Include="..\..\src\data\data.sector.h" />
     <ClInclude Include="..\..\src\data\data.shutdownPhase.h" />
     <ClInclude Include="..\..\src\data\data.startupPhase.h" />
   </ItemGroup>
