take a shortcut for the entity system but get working

--- a/source/code/intern/compiler/data/data.vcxproj
+++ b/source/code/intern/compiler/data/data.vcxproj
@@ -186,9 +186,11 @@
     <ClCompile Include="..\..\src\data\data.entityIterator.cpp" />
     <ClCompile Include="..\..\src\data\data.entityLink.cpp" />
     <ClCompile Include="..\..\src\data\data.entityList.cpp" />
+    <ClCompile Include="..\..\src\data\data.entitySystem.cpp" />
     <ClCompile Include="..\..\src\data\data.event.cpp" />
     <ClCompile Include="..\..\src\data\data.eventExample.cpp" />
     <ClCompile Include="..\..\src\data\data.eventSystem.cpp" />
+    <ClCompile Include="..\..\src\data\data.loadPhase.cpp" />
     <ClCompile Include="..\..\src\data\data.mainMenuPhase.cpp" />
     <ClCompile Include="..\..\src\data\data.map.cpp" />
     <ClCompile Include="..\..\src\data\data.metaEntitySystem.cpp" />
@@ -202,9 +204,11 @@
     <ClInclude Include="..\..\src\data\data.entityIterator.h" />
     <ClInclude Include="..\..\src\data\data.entityLink.h" />
     <ClInclude Include="..\..\src\data\data.entityList.h" />
+    <ClInclude Include="..\..\src\data\data.entitySystem.h" />
     <ClInclude Include="..\..\src\data\data.event.h" />
     <ClInclude Include="..\..\src\data\data.eventListener.h" />
     <ClInclude Include="..\..\src\data\data.eventSystem.h" />
+    <ClInclude Include="..\..\src\data\data.loadPhase.h" />
     <ClInclude Include="..\..\src\data\data.mainMenuPhase.h" />
     <ClInclude Include="..\..\src\data\data.map.h" />
     <ClInclude Include="..\..\src\data\data.metaEntity.h" />
