fix maps not being loaded from bin which causes crash when running on other pc

--- a/source/code/intern/compiler/data/data.vcxproj
+++ b/source/code/intern/compiler/data/data.vcxproj
@@ -220,8 +220,8 @@
     <ClInclude Include="..\..\src\data\data.startupPhase.h" />
   </ItemGroup>
   <ItemGroup>
-    <Xml Include="..\..\src\data\data.map-1.xml" />
-    <Xml Include="..\..\src\data\data.meta-entity.xml" />
+    <Xml Include="..\..\..\..\bin\data.map-1.xml" />
+    <Xml Include="..\..\..\..\bin\data.meta-entity.xml" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
