--- a/source/code/intern/compiler/data/data.vcxproj
+++ b/source/code/intern/compiler/data/data.vcxproj
@@ -188,15 +188,16 @@
     <ClCompile Include="..\..\src\data\data.entityList.cpp" />
     <ClCompile Include="..\..\src\data\data.entitySystem.cpp" />
     <ClCompile Include="..\..\src\data\data.event.cpp" />
-    <ClCompile Include="..\..\src\data\data.eventExample.cpp" />
     <ClCompile Include="..\..\src\data\data.eventSystem.cpp" />
     <ClCompile Include="..\..\src\data\data.loadPhase.cpp" />
     <ClCompile Include="..\..\src\data\data.mainMenuPhase.cpp" />
     <ClCompile Include="..\..\src\data\data.map.cpp" />
     <ClCompile Include="..\..\src\data\data.metaEntitySystem.cpp" />
     <ClCompile Include="..\..\src\data\data.playerSystem.cpp" />
+    <ClCompile Include="..\..\src\data\data.pointSystem.cpp" />
     <ClCompile Include="..\..\src\data\data.shutdownPhase.cpp" />
     <ClCompile Include="..\..\src\data\data.startupPhase.cpp" />
+    <ClCompile Include="..\..\src\data\data.unloadPhase.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\data\data.entity.h" />
@@ -215,9 +216,11 @@
     <ClInclude Include="..\..\src\data\data.metaEntity.h" />
     <ClInclude Include="..\..\src\data\data.metaEntitySystem.h" />
     <ClInclude Include="..\..\src\data\data.playerSystem.h" />
+    <ClInclude Include="..\..\src\data\data.pointSystem.h" />
     <ClInclude Include="..\..\src\data\data.sector.h" />
     <ClInclude Include="..\..\src\data\data.shutdownPhase.h" />
     <ClInclude Include="..\..\src\data\data.startupPhase.h" />
+    <ClInclude Include="..\..\src\data\data.unloadPhase.h" />
   </ItemGroup>
   <ItemGroup>
     <Xml Include="..\..\..\..\bin\data.map-1.xml" />
