--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,3 +11,12 @@ jobs:
         type: 'zip'
         filename: 'release.zip'
         path: './source/bin'
+  release:
+      runs-on: ubuntu-latest
+      permissions:
+        contents: write
+      steps:
+      - uses: actions/checkout@v3
+      - uses: ncipollo/release-action@v1
+        with:
+          artifacts: 'release.zip'
