--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,17 +11,9 @@ jobs:
         type: 'zip'
         filename: 'release.zip'
         path: './source/bin'
-  release:
-      needs: [build]
-      runs-on: ubuntu-latest
-      permissions:
-        contents: write
-      steps:
-      - name: Get current date
-        id: date
-        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
-      - uses: actions/checkout@v3
-      - uses: ncipollo/release-action@v1
-        with:
-          artifacts: 'release.zip'
-          tag: release-${{ steps.date.outputs.date }}
+    - name: Create Github Release
+      uses: ncipollo/release-action@v1
+      with:
+        artifacts: 'release.zip'
+        replacesArtifacts: false
+        allowUpdates: true
