--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,19 +5,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
+    
+    - name: Get current date
+      id: date
+      run: echo "::set-output name=date::$(date +'%Y-%m-%d:%H-%M')"
+      
     - name: Archive Release
       uses: thedoctor0/zip-release@0.7.1
       with:
         type: 'zip'
-        filename: 'release.zip'
+        filename: 'release-${{ steps.date.outputs.date }}.zip'
         path: './source/bin'
-    - name: Get current date
-      id: date
-      run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
+    
     - name: Create Github Release
       uses: ncipollo/release-action@v1
       with:
-        artifacts: 'release.zip'
+        artifacts: 'release-${{ steps.date.outputs.date }}.zip'
         replacesArtifacts: false
         allowUpdates: true
         tag: release-${{ steps.date.outputs.date }}
