--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ jobs:
     
     - name: Get current date
       id: date
-      run: echo "::set-output name=date::$(date +'%Y-%m-%d:%H-%M')"
+      run: echo "::set-output name=date::$(date +'%Y-%m-%d-%H-%M')"
       
     - name: Archive Release
       uses: thedoctor0/zip-release@0.7.1
