--- a/source/code/intern/compiler/data/data.vcxproj
+++ b/source/code/intern/compiler/data/data.vcxproj
@@ -211,6 +211,7 @@
     <ClInclude Include="..\..\src\data\data.event.h" />
     <ClInclude Include="..\..\src\data\data.eventListener.h" />
     <ClInclude Include="..\..\src\data\data.eventSystem.h" />
+    <ClInclude Include="..\..\src\data\data.eventType.h" />
     <ClInclude Include="..\..\src\data\data.highscoreSystem.h" />
     <ClInclude Include="..\..\src\data\data.loadPhase.h" />
     <ClInclude Include="..\..\src\data\data.mainMenuPhase.h" />
