--- a/source/code/intern/compiler/data/data.vcxproj.filters
+++ b/source/code/intern/compiler/data/data.vcxproj.filters
@@ -117,6 +117,9 @@
     <ClInclude Include="..\..\src\data\data.highscoreSystem.h">
       <Filter>player</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\data\data.eventType.h">
+      <Filter>events</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="phases">
